# multiversion_library_test

./: CMakeLists.txt  README.md  main_A.c  main_AB.c  main_AB.dlopen.c  main_B.c
A/: A.c  A.h  CMakeLists.txt
B/: B.c  B.h  CMakeLists.txt
C/v1/: C.c  CMakeLists.txt
C/v2/: C.c  C.h  CMakeLists.txt
